[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
name = "lspnetd"
description = "LiteServerProject Network Daemon"
dependencies = ["requests", "pydantic"]
requires-python = ">=3.12"
authors = [
    {name="Kiritow"}
]
license = { file = "LICENSE" }

[project.scripts]
lspnetd = "lspnetd:main"
