[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lspnetd"
version = "0.0.1"
description = "LiteServerProject Network Daemon"
dependencies = ["requests", "pydantic", "cryptography"]
requires-python = ">=3.12"
authors = [
    {name="Kiritow"}
]
license = { file = "LICENSE" }

[project.scripts]
lspnetd = "lspnetd:main"

[tool.setuptools]
packages = ["lspnetd"]
